# readwise-md-notion-flow-temp

./: .env.example  .flake8  .gitignore  .last_sync_at  CONTRIBUTING.md  Load_all  PROJECT_CONTEXT.md  Pre_flow_test  REPO_LAYOUT  main.py  pyproject.toml  requirements.txt
.github/workflows/: drive-access-smoke.yml  readwise_sync.yml
ISSUE_TEMPLATE/: feature_request.md
agents/voice2notion/: README.md
agents/voice2notion/apps/drive_watcher/: run.py
agents/voice2notion/apps/fetcher/: run.py
agents/voice2notion/apps/keywords/: __init__.py  run.py
agents/voice2notion/apps/summarizer/: __init__.py  run.py
agents/voice2notion/apps/transcriber/: __init__.py  run.py  whisper_utils.py
agents/voice2notion/shared/: config.py  google_drive.py  io_models.py  logging_utils.py  openai_utils.py  paths.py
docs/: SCHEMA.md  WORKFLOW.md
exports/: readwise_consolidated.md
exports/sources/: buddhism-without-beliefs.md  digital-stockholm-syndrome-in-the-post-ontological-age-forerunners.md  essays-in-love.md  fifty-shades-of-grey.md  postdisciplinary-knowledge.md  practical-programming-in-python.md  regenesis.md  the-architecture-of-happiness.md  the-school-of-life.md
src/readwise_notion_sync/: cli.py  models.py
src/readwise_notion_sync/exporters/: docx.py
src/readwise_notion_sync/services/: notion.py  readwise.py
src/readwise_notion_sync/sync/: cursors.py  pipeline.py  routing.py
src/readwise_notion_sync/utils/: settings.py
workflows/: drive-poll.yml  file-job.yml  smoke_legacy
